# GPT_BOT

./: .gitignore  README.md  docker-compose.yml  dockerfile  gtp_test.py  pyproject.toml
gpt_bot/: bot.py  config.py  dialogs.py  free_churchless_tech_api.py  main_keyboard.py  old_bot.py  settings.py  templates.py  test_dialogs.py  tokens_num.py  utils.py
gpt_bot/keyboards/: __init__.py  main_keyboard.py
gpt_bot/templates/: dialog_cleared.j2  dialogs_info.j2  help.j2  not_dialog.j2  status.j2
tests/: test_dialogs.py  test_num_tokens.py  test_templates.py  test_utils.py
