[tool.poetry]
name = "gpt-bot"
version = "0.1.0"
description = ""
authors = ["dezhik"]
readme = "README.md"
packages = [{include = "gpt_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.5"
aiogram = "^2.25.1"
aiohttp = "^3.8.4"
python-decouple = "^3.8"
fake-useragent = "^1.1.3"
curl-cffi = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
